<resources>
    <string name="app_name" translatable="false">AOSP Xpert</string>
    <string name="app_themed_icon_title">Alternative Themed Icon</string>
    <string name="xposed_desc">Customizations for AOSP devices</string>
    <string name="title_activity_settings" translatable="false">@string/app_name</string>
    <string name="volume_tile_title">Media Volume</string>
    <string name="app_switch_tile_title">Switch App Profile</string>
    <string name="hide_default">Hide (Default)</string>
    <string name="percent_of_default_size">% of default size</string>
    <string name="overlay_none_title">(Default)</string>
    <string name="general_section">General options</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="sysui_restart_needed">Requires a SystemUI restart to apply</string>
    <string name="restart_needed">Requires a reboot to apply</string>
    <string name="more_area">more area</string>
    <string name="less_area">less area</string>
    <string name="current_version">Current version: %s</string>
    <string name="notification_channel_update">Updates</string>
    <string name="notification_channel_update_desc">This channel shows notification about the latest updates.</string>
    <string name="new_update_title">Update available</string>
    <string name="new_update_desc">A new version of AospXpert is available</string>
    <string name="skip_this_update">Skip this update</string>
    <string name="browser_not_found">Browser not found</string>
    <string name="settings_general_section_title">General</string>
    <string name="settings_update_section_title">Update</string>
    <string name="settings_misc_section_title">Misc</string>
    <string name="settings_about_section_title">About</string>
    <string name="settings_check_for_update_title">Check for updates</string>
    <string name="auto_update_title">Automatically check for updates</string>
    <string name="auto_update_summary">Check for new versions once in a while</string>
    <string name="update_over_wifi_title">Check updates over WiFi only</string>
    <string name="update_over_wifi_summary">Check for updates in background only when connected to wifi</string>
    <string name="github_repo_title">GitHub repository</string>
    <string name="github_repo_summary" translatable="false">dttzyjw0012/AospXpert</string>
    <string name="telegram_group_title">Telegram group</string>
    <string name="telegram_group_summary" translatable="false">\@AospXpert_Support</string>
    <string name="usage_title">Usage</string>
    <string name="usage_summary">Open wiki page</string>
    <string name="crowdin_title">Translate to your language</string>
    <string name="crowdin_summary">Help us in translating %s into your own language</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="shrug" translatable="false">¯\\_(シ)_/¯</string>
    <string name="lockscreen_header_title">Lock screen</string>
    <string name="lockscreen_header_summary">Change your keyguard to match your taste</string>
    <string name="statusbar_header">Status bar</string>
    <string name="statusbar_header_summary">That thin bar that shows useful data</string>
    <string name="nav_header">Navigation bar</string>
    <string name="nav_header_summary">Change the way you navigate through apps</string>
    <string name="dialer_header">Phone &amp; dialer</string>
    <string name="dialer_header_summary">A bit of aid for your phone calls</string>
    <string name="misc_header">Miscellaneous</string>
    <string name="misc_header_summary">Whatever else offered by AospXpert</string>
    <string name="qs_panel_category_title">Quick settings panel</string>
    <string name="qs_panel_category_summary">Brightness slider, flashlight level and more</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_summary">Customize visual style and iconography</string>
    <string name="pm_header">Package manager</string>
    <string name="pm_header_summary">Bypass security checks for apk files</string>
    <string name="hotspot_header">Portable hotspot</string>
    <string name="hotspot_header_summary">If you\'re into hidden WiFi stuff</string>
    <string name="hotspot_hide_ssid_title">Hide SSID</string>
    <string name="hotspot_inactivity_timeout_title">Inactivity timeout</string>
    <string name="hotspot_max_client_title">Maximum clients</string>
    <string name="hotspot_disable_approval_title">Hotspot connectivity issues workaround</string>
    <string name="hotspot_disable_approval_summary">Allow non-\"pre-approved\" clients to connect seamlessly</string>
    <string name="depth_wallpaper_options">Depth effect wallpaper</string>
    <string name="depth_wallpaper_title">Depth effect wallpaper(a14+)</string>
    <string name="depth_wallpaper_summary">Dynamically integrate wallpaper\'s foreground with the clock</string>
    <string name="depth_wallpaper_ai_model_title">Preferred AI model</string>
    <string name="depth_wallpaper_opacity_title">Wallpaper foreground opacity</string>
    <string name="depth_wallpaper_aod_title">Also on \"always on display\"</string>
    <string name="depth_wallpaper_model_ready">AI model is downloaded on the device</string>
    <string name="depth_wallpaper_model_not_available">AI model isn\'t available on the device (yet)</string>
    <string name="disable_unlock_hint_title">Disable the unlock hint animation</string>
    <string name="ls_general_options">Lock screen options</string>
    <string name="hide_avatar_title">Remove user avatar (multi user mode)</string>
    <string name="fingerprint_options">Fingerprint</string>
    <string name="transparent_fingerprint_circle">Remove background circle from under-display fingerprint</string>
    <string name="transparent_fingerprint_circle_off">Circle around fingerprint icon is active</string>
    <string name="transparent_fingerprint_circle_on">Circle around fingerprint icon will be hidden</string>
    <string name="fingerprint_icon">Remove foreground icon from under-display fingerprint</string>
    <string name="fingerprint_icon_off">Fingerprint icon is active</string>
    <string name="fingerprint_icon_on">Fingerprint icon will be hidden</string>
    <string name="custom_text_category">Custom text on Lockscreen</string>
    <string name="double_tap_sleep_title">Double-tap to sleep</string>
    <string name="sb_multi_row_system_icons">Multi-row system icons (needs raised statusbar height)</string>
    <string name="sb_multi_row_notification_icons">Multi-row notification icons (needs raised statusbar height)</string>
    <string name="sb_double_row_category">Double Statusbar rows</string>
    <string name="sb_icon_sort_mode">Icon placement method</string>
    <string name="sb_notification_limit">Maximum number of notification icons (Leave blank for Default)</string>
    <string name="lte_4g_icon_title">LTE / 4G Icon</string>
    <string name="combined_signal_icon_title">Combined signal icons</string>
    <string name="hide_roaming_title">Hide mobile roaming indicators</string>
    <string name="caution_mobile_costs">CAUTION - Not knowing that you\'re roaming can increase your mobile costs</string>
    <string name="volte_icon_title">Show VoLTE icon when available</string>
    <string name="vowifi_icon_title">Show VoWiFi icon when available</string>
    <string name="hide_privacychip_title">Hide privacy indicators\n(Camera, Mic)</string>
    <string name="sbc_header">Status bar clock customization</string>
    <string name="network_settings_pref">Network monitor settings…</string>
    <string name="ntsb_category_title">Network Monitor</string>
    <string name="ntsb_enabled_title">Enable network monitor</string>
    <string name="ntsb_position_title">Monitor Position</string>
    <string name="ntsb_threshold_title">Auto-hide threshold</string>
    <string name="ntsb_threshold_summary">Hide if traffic is less than… (Kilobytes)</string>
    <string name="network_mode_title">Monitor style</string>
    <string name="network_colorful_title">Make it colorful</string>
    <string name="network_download_top">Download speed on top</string>
    <string name="network_download_color_title">Download color</string>
    <string name="network_upload_color_title">Upload color</string>
    <string name="network_opacity_title">Opacity</string>
    <string name="network_interval_title">Refresh interval (seconds)</string>
    <string name="network_show_icons_title">Show traffic direction icons</string>
    <string name="nt_unit_show_bits">Show in bits/s</string>
    <string name="statusbar_general_options">Status Bar Options</string>
    <string name="unread_messages_title">Show number of unread messages</string>
    <string name="status_bar_height">Status bar height (rotate screen to apply)</string>
    <string name="sb_padding_title">Status bar Padding</string>
    <string name="sb_padding_summary">Setting the values to min/max is equivalent to device Default</string>
    <string name="sbbIcon_header">Battery icon settings</string>
    <string name="BB_enable_title">Enable Battery Bar</string>
    <string name="BB_onlycharging_title">Only during charging</string>
    <string name="BB_move_SB_bottom_title">At bottom of Status bar</string>
    <string name="BB_colorful_title">Make it colorful</string>
    <string name="BB_Opacity_title">Bar opacity</string>
    <string name="BB_center_align_title">Center Aligned</string>
    <string name="BB_Thickness_title">Bar thickness</string>
    <string name="BB_animate_charging">Animate charging</string>
    <string name="BB_indicate_charging">Indicate charging</string>
    <string name="BB_indicate_fast_charging">Indicate fast charging</string>
    <string name="BB_indicate_power_save">Indicate power save</string>
    <string name="BB_warning_level">Warning level range</string>
    <string name="BB_warning_tip">Set both to 0 to disable level-based colors</string>
    <string name="BB_batteryCriticalColor">Critical level color</string>
    <string name="BB_batteryWarningColor">Warning level color</string>
    <string name="BB_batteryChargingColor">Charging color</string>
    <string name="BB_batteryFastChargingColor">Fast charging color</string>
    <string name="BB_batteryPowerSaveColor">Power Save color</string>
    <string name="BB_transit_colors">Shade colors between this range</string>
    <string name="colored_battery_percentage_title">Colored battery percentage while charging</string>
    <string name="gesturenav_header">Gesture navigation</string>
    <string name="threebutton_header_title">3-Button navigation</string>
    <string name="taskbar_header_title">Taskbar navigation</string>
    <string name="modify_3button_title">Modify the buttons order</string>
    <string name="three_button_left_title">Left button</string>
    <string name="three_button_center_title">Center button</string>
    <string name="three_button_right_title">Right button</string>
    <string name="hide_navbar_title">Hide navigation bar</string>
    <string name="sleep_on_flat_screen_title">Turn off the screen on flat surface</string>
    <string name="sleep_on_flat_screen_tile_title">Sleep on surface</string>
    <string name="flat_screen_timeout_title">Screen timeout on flat surface</string>
    <string name="flat_screen_timeout_respect_wakelock_title">Respect wake locks</string>
    <string name="vibrate_on_call_active_title">Vibrate on outgoing call answered</string>
    <string name="vibrate_on_call_drop_title">Vibrate when call disconnects</string>
    <string name="vibration_type_notification">Intensity defined by system notification vibration settings</string>
    <string name="dialer_mute_record_message_title">Remove call recording announcement</string>
    <string name="dialer_mute_record_message_summary">Only applies to Google phone app with call recording enabled</string>
</resources>