<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/com.yhc.aospxpert.ui.preferencesearch">

	<com.yhc.aospxpert.ui.preferences.IllustrationPreference
		android:key="battery_bar_illustration"
		app:lottie_rawRes="@raw/battery_bar"
		search:ignore="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialMainSwitchPreference
		android:defaultValue="false"
		android:key="BBarEnabled"
		android:title="@string/BB_enable_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="BBOnlyWhileCharging"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_onlycharging_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="BBOnBottom"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_move_SB_bottom_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="BBarColorful"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_colorful_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialRangeSliderPreference
		android:dependency="BBarEnabled"
		android:key="BBOpacity"
		android:title="@string/BB_Opacity_title"
		app:defaultValue="100"
		app:iconSpaceReserved="false"
		app:updatesContinuously="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialRangeSliderPreference
		android:dependency="BBarEnabled"
		android:key="BBarHeight"
		android:title="@string/BB_Thickness_title"
		app:defaultValue="50"
		app:iconSpaceReserved="false"
		app:updatesContinuously="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="BBSetCentered"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_center_align_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="BBAnimateCharging"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_animate_charging"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="indicateCharging"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_indicate_charging"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="-16711936"
		android:dependency="BBarEnabled"
		android:key="batteryChargingColor"
		android:title="@string/BB_batteryChargingColor"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="indicateFastCharging"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_indicate_fast_charging"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="-16776961"
		android:dependency="BBarEnabled"
		android:key="batteryFastChargingColor"
		android:title="@string/BB_batteryFastChargingColor"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="indicatePowerSave"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_indicate_power_save"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="0xFFFFBF00"
		android:dependency="BBarEnabled"
		android:key="batteryPowerSaveColor"
		android:title="@string/BB_batteryPowerSaveColor"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialRangeSliderPreference
		android:dependency="BBarEnabled"
		android:key="batteryWarningRange"
		android:summary="@string/BB_warning_tip"
		android:title="@string/BB_warning_level"
		app:defaultValue="15,40"
		app:iconSpaceReserved="false"
		app:maxVal="100"
		app:minVal="0"
		app:tickInterval="1"
		app:valueCount="2" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:dependency="BBarEnabled"
		android:key="BBarTransitColors"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/BB_transit_colors"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="-65536"
		android:dependency="BBarEnabled"
		android:key="batteryCriticalColor"
		android:title="@string/BB_batteryCriticalColor"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="-256"
		android:dependency="BBarEnabled"
		android:key="batteryWarningColor"
		android:title="@string/BB_batteryWarningColor"
		app:iconSpaceReserved="false" />

</PreferenceScreen>