<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/com.yhc.aospxpert.ui.preferencesearch">

	<com.yhc.aospxpert.ui.preferences.IllustrationPreference
		android:key="network_speed_illustration"
		app:lottie_rawRes="@raw/lottie_network_speed"
		search:ignore="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialListPreference
		android:defaultValue="0"
		android:entries="@array/network_mode_names"
		android:entryValues="@array/network_mode_codes"
		android:key="networkTrafficMode"
		android:summary="%s"
		android:title="@string/network_mode_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="true"
		android:key="networkTrafficRXTop"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/network_download_top"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="true"
		android:key="networkTrafficShowIcons"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/network_show_icons_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="networkTrafficShowInBits"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/nt_unit_show_bits"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialRangeSliderPreference
		android:key="networkTrafficInterval"
		android:title="@string/network_interval_title"
		app:defaultValue="1"
		app:iconSpaceReserved="false"
		app:maxVal="5"
		app:minVal="1"
		app:updatesContinuously="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialEditTextPreference
		android:key="networkTrafficThreshold"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:summary="@string/ntsb_threshold_summary"
		android:title="@string/ntsb_threshold_title"
		app:defaultValue="10"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="networkTrafficColorful"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/network_colorful_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="-7617718"
		android:key="networkTrafficDLColor"
		android:title="@string/network_download_color_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialColorPreference
		android:defaultValue="-351845"
		android:key="networkTrafficULColor"
		android:title="@string/network_upload_color_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialRangeSliderPreference
		android:key="networkTrafficOpacity"
		android:title="@string/network_opacity_title"
		app:defaultValue="100"
		app:iconSpaceReserved="false"
		app:isPreferenceVisible="false"
		app:updatesContinuously="true" />

</PreferenceScreen>