<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/com.yhc.aospxpert.ui.preferencesearch">

	<com.yhc.aospxpert.ui.preferences.IllustrationPreference
		android:key="dialer_illustration"
		app:lottie_rawRes="@raw/dialer"
		search:ignore="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="vibrateOnAnswered"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/vibration_type_notification"
		android:title="@string/vibrate_on_call_active_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="vibrateOnDrop"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/vibration_type_notification"
		android:title="@string/vibrate_on_call_drop_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="DialerRemoveRecordMessage"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/dialer_mute_record_message_summary"
		android:title="@string/dialer_mute_record_message_title"
		app:iconSpaceReserved="false" />

</PreferenceScreen>