<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/com.yhc.aospxpert.ui.preferencesearch">

	<com.yhc.aospxpert.ui.preferences.IllustrationPreference
		android:key="system_nav_2_button_illustration"
		app:lottie_rawRes="@raw/lottie_system_nav_2_button"
		search:ignore="true" />

	<com.yhc.aospxpert.ui.preferences.MaterialPreference
		android:key="gesturenav_header"
		android:title="@string/gesturenav_header"
		app:fragment="com.yhc.aospxpert.ui.fragments.GestureNavFragment"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialPreference
		android:key="threebutton_header"
		android:title="@string/threebutton_header_title"
		app:fragment="com.yhc.aospxpert.ui.fragments.ThreeButtonNavFragment"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialPreference
		android:key="taskbar_header"
		android:title="@string/taskbar_header_title"
		app:fragment="com.yhc.aospxpert.ui.fragments.TaskbarNavFragment"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="HideNavbarOverlay"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/hide_navbar_title"
		app:iconSpaceReserved="false" />

	<com.yhc.aospxpert.ui.preferences.MaterialSwitchPreference
		android:defaultValue="false"
		android:key="HideNavbar"
		android:summaryOff="@string/general_off"
		android:summaryOn="@string/general_on"
		android:title="@string/hide_navbar_title"
		app:iconSpaceReserved="false" />

</PreferenceScreen>